# WDHANY

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Lessons.md  Lessons.odt  Linux.sh  Makefile  README.md  README.norg  README.org  SECURITY.md  Windows.ps1  build.sh  run.sh  sql.cpp  sql.h  test.db
.ccls-cache/@@home@gc@Projects@WebsocketApp@Server/: @usr@include@alloca.h.blob  @usr@include@arpa@inet.h.blob  @usr@include@asm-generic@bitsperlong.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@asm-generic@int-ll64.h.blob  @usr@include@asm-generic@ioctl.h.blob  @usr@include@asm-generic@ioctls.h.blob  @usr@include@asm-generic@posix_types.h.blob  @usr@include@asm-generic@socket.h.blob  @usr@include@asm-generic@sockios.h.blob  @usr@include@asm-generic@types.h.blob  @usr@include@asm@bitsperlong.h.blob  @usr@include@asm@errno.h.blob  @usr@include@asm@ioctl.h.blob  @usr@include@asm@ioctls.h.blob  @usr@include@asm@posix_types.h.blob  @usr@include@asm@posix_types_64.h.blob  @usr@include@asm@socket.h.blob  @usr@include@asm@sockios.h.blob  @usr@include@asm@types.h.blob  @usr@include@assert.h.blob  @usr@include@bits@atomic_wide_counter.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@confname.h.blob  @usr@include@bits@cpu-set.h.blob  @usr@include@bits@endian.h.blob  (+1685 more)
resources/: .~lock.Lessons.odt#  Lessons.odt  config.toml  db.sqlite  libsqlite3.so.0
src/: .#usercontrol.h  CMakeLists.txt  genkey.cpp  main.cpp  main.rs  usercontrol.h
src/include/: encryption.h  hashex.cpp  hashing.h  sql.h  sqlinit.h  sqlite_orm.h
src/include/crow/: http_connection.h  http_request.h  http_server.h  socket_adaptors.h  task_timer.h
src/include/dev/tuple_helper/: tuple_helper.h
src/static/: global.css
src/templates/: home.html  lesson.html  login.html  signup.html
static/: global.css
templates/: 404.html.tera  500.html.tera  home.html.tera  lesson.html  lesson.html.tera
(+6 files in other folders)
